deploy/components/inference-gateway/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${POOL_NAME}-inference-route
spec:
  parentRefs:
  - name: inference-gateway
  rules:
  - matches:
    - headers:
      - type: Exact
        name: X-Gateway-Model-Name
        value: ${MODEL_NAME_SAFE}
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: ${POOL_NAME}
      port: 8000
    timeouts:
      request: 30s
